@@ -1,0 +1,32 @@
+div.emthumb-edit-image-row {
+  border: 1px solid #e5e5e5;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+div.emthumb-edit-preview img {
+  border: 1px solid #e5e5e5;
+}
+
+div.emthumb-edit-preview  {
+  float: left;
+}
+
+div.emthumb-edit-image-replace { 
+  font-size: .9em;
+}
+
+div.emthumb-edit-image-detail input.form-text {
+  width: 100%;
+}
+
+div.emthumb-edit-image-detail {
+  margin-left: 180px;
+  margin-right: 20px;
+}
+
+div.emthumb-edit-image-flags div.form-item {
+	float: right;
+}
+
+
