@@ -1,5 +1,8 @@
 /* $Id$ */
 
+2008-01-08
+remove references to imagefield
+
 2008-01-07
 #207165/vnd remove debug code
 #207085/vnd Fatal error: Cannot access empty property
